# DiskEngine

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_EN.md
dataplane/: go.mod
dataplane/cmd/client/: main.go
dataplane/cmd/coordinator/: main.go
dataplane/cmd/gateway/: main.go
dataplane/cmd/metacoordinator/: main.go
dataplane/cmd/storagenode/: main.go
dataplane/internal/ckv/: ckv.go  ckv_cgo.go
dataplane/internal/coordinator/: server.go
dataplane/internal/gateway/: gateway.go
dataplane/internal/metacoordinator/: server.go
dataplane/internal/oplog/: oplog.go
dataplane/internal/rpc/pb/: storagenode.pb.go  storagenode_grpc.pb.go
dataplane/proto/: coordinator.proto  metacoordinator.proto  storagenode.proto
dataplane/scripts/: gen_proto.sh  run_cluster.sh
demo/: demo_engine.c  demo_kv.c  demo_kv2.c
src/alloc/: range_alloc.c  range_alloc.h
src/blob/: blob_index.c  blob_index.h  blob_record.c  blob_record.h
src/common/: crc32_ieee.c  crc32_ieee.h
src/engine/: disk_engine.c  disk_engine.h  disk_engine_checkpoint.c
src/kv/: kv_store.c  kv_store.h
src/superblock/: superblock.c  superblock.h
src/wal/: wal.c  wal.h  wal_apply_range.c  wal_apply_range.h  wal_format.h
